View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025361 | Open CASCADE | OCCT:Samples | public | 2014-10-13 14:52 | 2014-11-12 09:53 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | crash | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2008 | ||
Product Version | 6.8.0 | ||||
Target Version | 6.8.0 | Fixed in Version | 6.8.0 | ||
Summary | 0025361: Sample "Voxel" crashes during "Demo - Collisions" demonstration | ||||
Description | Sample "Voxel" crashes during "Demo - Collisions" demonstration | ||||
Steps To Reproduce | 1. Launch "Voxel" sample 2. Select menu "Demo" - "Collisions" 3. Wait | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR25361 has been created by vro. SHA-1: bfca0e5c8611d53343f4c11d7c1d3782c08ffc22 Detailed log of new commits: Author: vro Date: Tue Oct 14 08:28:47 2014 +0400 Deletion of an array was incorrect. |
|
Hello Alexey, the bug is fixed: CR25361. Deletion of an array of voxels was incorrect (I forgot [] brackets after delete operator). Could you revise it please? |
|
Fix has been tested. Sample is not crashed during executing "Demo" - "Collisions" |
|
Branch CR25361 has been deleted by inv. SHA-1: bfca0e5c8611d53343f4c11d7c1d3782c08ffc22 |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-10-13 14:52 |
|
New Issue | |
2014-10-13 14:52 |
|
Assigned To | => vro |
2014-10-13 14:52 |
|
Test case number | => Not needed |
2014-10-14 08:28 | git | Note Added: 0033052 | |
2014-10-14 08:31 | vro | Note Added: 0033053 | |
2014-10-14 08:31 | vro | Assigned To | vro => apv |
2014-10-14 08:31 | vro | Status | new => resolved |
2014-10-20 13:38 | bugmaster | Assigned To | apv => bugmaster |
2014-10-20 13:39 | bugmaster | Status | resolved => reviewed |
2014-10-20 13:40 | bugmaster | Note Added: 0033326 | |
2014-10-20 13:40 | bugmaster | Status | reviewed => tested |
2014-10-23 10:31 | bugmaster | Target Version | => 6.8.0 |
2014-10-24 15:38 | bugmaster | Changeset attached | => occt master 7a13ab2d |
2014-10-24 15:38 | bugmaster | Status | tested => verified |
2014-10-24 15:38 | bugmaster | Resolution | open => fixed |
2014-11-11 12:43 |
|
Fixed in Version | => 6.8.0 |
2014-11-11 13:02 |
|
Status | verified => closed |
2014-11-12 09:53 | git | Note Added: 0034317 |