0025361: Sample "Voxel" crashes during "Demo - Collisions" demonstration

Deletion of an array was incorrect.